--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -1,8 +1,8 @@
 # Header
 menu:
   Home: /
-  Archives: /archives
-rss: /atom.xml
+  # Archives: /archives
+# rss: /atom.xml
 
 # Content
 excerpt_link: Read More
@@ -12,10 +12,10 @@ fancybox: true
 sidebar: right
 widgets:
 - category
-- tag
-- tagcloud
-- archive
-- recent_posts
+# - tag
+# - tagcloud
+# - archive
+# - recent_posts
 
 # display widgets at the bottom of index pages (pagination == 2)
 index_widgets:
